bk_ida/gccida/c3/build_common_tree_nodes
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes/src/tree.c:5310:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *signed_type; // [rsp+0h] [rbp-10h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes/src/tree.c:5312:18: error: use of undeclared identifier 'splay_tree_value'
global_trees = ( splay_tree_value)make_node( ERROR_MARK); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes/src/tree.c:5336:27: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 1) = ( splay_tree_value)make_signed_type( mode_bitsize[2]); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes/src/tree.c:5337:27: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 2) = ( splay_tree_value)make_signed_type( mode_bitsize[3]); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes/src/tree.c:5338:27: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 3) = ( splay_tree_value)make_signed_type( mode_bitsize[4]); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes/src/tree.c:5339:27: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 4) = ( splay_tree_value)make_signed_type( mode_bitsize[5]); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes/src/tree.c:5340:27: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 5) = ( splay_tree_value)make_signed_type( mode_bitsize[6]); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes/src/tree.c:5341:27: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 6) = ( splay_tree_value)make_unsigned_type( mode_bitsize[2]); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes/src/tree.c:5342:27: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 7) = ( splay_tree_value)make_unsigned_type( mode_bitsize[3]); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes/src/tree.c:5343:27: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 8) = ( splay_tree_value)make_unsigned_type( mode_bitsize[4]); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes/src/tree.c:5344:27: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 9) = ( splay_tree_value)make_unsigned_type( mode_bitsize[5]); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes/src/tree.c:5345:28: error: use of undeclared identifier 'splay_tree_value'
*( &global_trees + 10) = ( splay_tree_value)make_unsigned_type( mode_bitsize[6]); 
                           ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_common_tree_nodes/src/obj/tree.o] Error 1
